--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
   },
   "require": {
     "vlucas/phpdotenv": "^5.6",
-    "twig/twig": "^3.0"
+    "twig/twig": "^3.0",
+    "aura/router": "^3.4",
+    "laminas/laminas-diactoros": "^3.5"
   }
 }
