--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,8 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule . index.php [L]
+    RewriteRule . index.php [L]
+</IfModule>
