--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_NOME="Avaliação PHP"
 
-DATABASE_HOST=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DATABASE_HOST='localhost'
+DATABASE_NAME='avaliacao'
+DATABASE_USER='root'
+DATABASE_PASSWORD=''
+DATABASE_CHARSET='utf8mb4'
